--- a/app/views/audits/_form.html.erb
+++ b/app/views/audits/_form.html.erb
@@ -12,7 +12,7 @@
     </div>
   <% end %>
   <div class="small-12 medium-6 columns">
-    <h1>Audit</h1>
+    <h1>Audit Form</h1>
   </div>
 
   <div class="small-12 medium-6 columns">
