--- a/app/views/walkthroughs/_form.html.erb
+++ b/app/views/walkthroughs/_form.html.erb
@@ -883,7 +883,7 @@
       <nav class="top-bar bottom-bar" >
         <section class="top-bar-section">
 
-          <%= link_to new_note_path do %>
+          <%= link_to new_note_path(:request_id => @walkthrough.request_id) do %>
             <div class="bottom-button">
               Add Note
 
