kat's required fields done

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -16,9 +16,10 @@
   <div class="row">
       <div class="span7">
         <fieldset>
-          <legend>Customer</legend>
+          <legend>Client</legend>
 
-    <%= customer_form.label :company_name %><br>
+          <label>* Company Name</label>
+
     <%= customer_form.text_field :company_name %>
   </div>
 
@@ -29,7 +30,7 @@
         <%= simple_nested_form_for @customer do |f| %>
            <%= f.fields_for :requests do |request_form| %>
               <%= request_form.hidden_field :customer_id, input_html: {value: @cus_id}%>
-              First Name: (required for request form to save) <%= request_form.text_field :contact_firstname %>
+              *First Name: <%= request_form.text_field :contact_firstname %>
               Last Name: <%= request_form.text_field :contact_lastname %>
               Title: <%= request_form.text_field :title %>
               Email: <%= request_form.text_field :email %>
@@ -37,7 +38,7 @@
               Street Address: <%= request_form.text_field :street_address %>
               City: <%= request_form.text_field :city %>
               Zip: <%= request_form.text_field :zip_code %>
-              Date: <%= request_form.input :date, as: :string, input_html: { class: 'datepicker', placeholder: "Enter  Date"} %>
+              <%= request_form.input :date, as: :string, input_html: { class: 'datepicker', placeholder: "Enter Date"} %>
           <% end %>
           <% end %> 
           <p>
