--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -36,7 +36,7 @@
       <div class="small-12 medium-6 columns">
         <div class="field row">
           <div class="small-3 columns">
-            <label for="right-label" class="left inline">Date</label>
+            <label for="right-label" class="left inline">* Date</label>
           </div>
           <div class="small-9 columns">
             <%= f.input :date, as: :string, input_html: { class: 'datepicker', placeholder: "Enter Date of Audit", readonly:"readonly"}, label: false %>
