changed customer to client on request details in request show page

--- a/app/views/requests/_request_details.html.erb
+++ b/app/views/requests/_request_details.html.erb
@@ -5,7 +5,7 @@
 	</p>
 </br>
 	<p>
-    <strong>Customer:</strong>
+    <strong>Client:</strong>
     <%= @request.customer.company_name %>
   </p>
 
