added messages for when no data is present in tables

--- a/app/views/customers/_all_customers.html.erb
+++ b/app/views/customers/_all_customers.html.erb
@@ -1,28 +1,36 @@
-<table width="100%">
-  <thead>
-    <tr>
-      <th>Client Name</th>
-      <th>Latest Request</th>
-      <th>Point of Contact</th>
-      <th></th>
-     
-    </tr>
-  </thead>
+<% if !@customers.empty? %>
 
-  <tbody>
-    <% @customers.each do |customer| %>
+  <table width="100%">
+    <thead>
       <tr>
-        <td><%= link_to customer.company_name, customer %></td>
-        <td><%= link_to customer.requests.chronological.last.date.strftime('%b %e, %Y'), customer.requests.chronological.last%></td>
-        <td><%= link_to customer.requests.chronological.last.contact_firstname + ' ' + customer.requests.chronological.last.contact_lastname, customer.requests.chronological.last %></td>
-        <!-- Make this an icon later -->
-        <td><%= link_to '>', customer%></td>
+        <th>Client Name</th>
+        <th>Latest Request</th>
+        <th>Point of Contact</th>
+        <th></th>
+       
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br/>
-<span class="paginate">
-<%= will_paginate @customers, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next" %>
-</span>
+    <tbody>
+      <% @customers.each do |customer| %>
+        <tr>
+          <td><%= link_to customer.company_name, customer %></td>
+          <td><%= link_to customer.requests.chronological.last.date.strftime('%b %e, %Y'), customer.requests.chronological.last%></td>
+          <td><%= link_to customer.requests.chronological.last.contact_firstname + ' ' + customer.requests.chronological.last.contact_lastname, customer.requests.chronological.last %></td>
+          <!-- Make this an icon later -->
+          <td><%= link_to '>', customer%></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <br/>
+  <span class="paginate">
+  <%= will_paginate @customers, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next" %>
+  </span>
+
+<% else %>
+
+  <p>No clients entered.</p>
+
+<%end%>
