--- a/app/views/home/_recent_audits.html.erb
+++ b/app/views/home/_recent_audits.html.erb
@@ -1,27 +1,33 @@
-<table class="table" width="100%">
-  <tr>
-    <th>Client</th>
-    <th>Generator</th>
-    <th>Start Date</th>
-    <th>End Date</th>
-  </tr>
 
-  <% audits.each do |audit| %>
+<% if !@audits.empty? %>
+
+  <table class="table" width="100%">
     <tr>
-      <!-- How do I get the company name of request??? -->
-      <td><%= link_to audit.request.customer.company_name, audit_path(audit) %></td>
-      <td><%= audit.generator%></td>
-      <td><%= audit.start_date.strftime('%b %e, %Y')%></td>
-      <td><%= audit.end_date.strftime('%b %e, %Y')%></td>
-      
-      
+      <th>Client</th>
+      <th>Generator</th>
+      <th>Start Date</th>
+      <th>End Date</th>
     </tr>
-  <% end %>
-</table></br>
+
+    <% audits.each do |audit| %>
+      <tr>
+        <!-- How do I get the company name of request??? -->
+        <td><%= link_to audit.request.customer.company_name, audit_path(audit) %></td>
+        <td><%= audit.generator%></td>
+        <td><%= audit.start_date.strftime('%b %e, %Y')%></td>
+        <td><%= audit.end_date.strftime('%b %e, %Y')%></td>
+        
+        
+      </tr>
+    <% end %>
+  </table></br>
+
+<% else %>
+
+  <p>No audits at this time.</p>
+
+<% end %>
 
 
 
-<!-- Add the pagination using will_paginate gem -->
-<!-- <span class="paginate"> -->
-<%#= will_paginate requests, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next" %>
-<!-- </span> -->
+
