--- a/app/views/home/_recent_requests.html.erb
+++ b/app/views/home/_recent_requests.html.erb
@@ -1,25 +1,31 @@
-<table class="table" width="100%">
-  <tr>
-    <th>Client</th>
-    <th>Start Date</th>
-    <th></th>
-  </tr>
 
-  <% requests.each do |request| %>
+
+<% if !@requests.empty? %>
+
+  <table class="table" width="100%">
     <tr>
-      <!-- How do I get the company name of request??? -->
-      <td><%= link_to request.customer.company_name, request %></td>
-      <td><%= link_to request.date.strftime('%b %e, %Y'), request%></td>
-      <td><%= link_to ">", request%></td>
-      
-      
+      <th>Client</th>
+      <th>Start Date</th>
+      <th></th>
     </tr>
-  <% end %>
-</table></br>
 
-<%= link_to "View All Requests", requests_path %>
+    <% requests.each do |request| %>
+      <tr>
+        <!-- How do I get the company name of request??? -->
+        <td><%= link_to request.customer.company_name, request %></td>
+        <td><%= link_to request.date.strftime('%b %e, %Y'), request%></td>
+        <td><%= link_to ">", request%></td>
+        
+        
+      </tr>
+    <% end %>
+  </table></br>
 
-<!-- Add the pagination using will_paginate gem -->
-<!-- <span class="paginate">
-<%#= will_paginate requests, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next" %>
-</span> -->
+  <%= link_to "View All Requests", requests_path %>
+
+<% else %>
+
+  <p>No requests at this time.</p>
+
+<% end %>
+
