--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -96,10 +96,10 @@
       <div class="small-12 medium-6 columns">
         <div class="field row">
           <div class="small-3 columns">
-            <label for="right-label" class="left inline">Phone (111-222-3333)</label>
+            <label for="right-label" class="left inline">Phone</label>
           </div>
           <div class="small-9 columns">
-            <%= f.text_field :phone %>
+            <%= f.text_field :phone, placeholder: "eg 111-222-3333" %>
           </div>
         </div>
       </div>
