fixed back button style on new client page

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -163,6 +163,7 @@
       </div>
 
   <div class="actions">
+    <%= link_to 'Back to Clients', customers_path, class: "button small" %>
     <%= customer_form.submit "Save", class: 'button small' %>
   </div>
   </div>
