the form for requests was updated but i don't know why

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -99,7 +99,7 @@
             <label for="right-label" class="left inline">Phone</label>
           </div>
           <div class="small-9 columns">
-            <%= f.text_field :phone, placeholder: "eg 111-222-3333" %>
+            <%= f.text_field :phone, placeholder: "e.g. 111-222-3333" %>
           </div>
         </div>
       </div>
