fixed link hover color

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -3,7 +3,7 @@
 
  <% if not flash[:notice].nil? %>
     <div id="error_explanation">
-      <h2><%= pluralize(flash[:notice].count, "error") %> prohibited this customer from being saved:</h2>
+      <h2><%= pluralize(flash[:notice].count, "error") %> prohibited this client from being saved:</h2>
 
       <ul>
       <% flash[:notice].full_messages.each do |msg| %>
@@ -12,19 +12,6 @@
       </ul>
     </div>
   <% end %>
-  
-<!--   <% if @customer.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this client from being saved:</h2>
-
-      <ul>
-      <% @customer.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %> -->
-  <!-- took away user_id input and set it to always be user_id=1 in the controller -->
 
   <div class="row">
       <div class="span7">
